<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/saved_configs_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/save_slots_title"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/static_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/static_title"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bar_1" />

    <com.flask.colorpicker.ColorPickerView
        android:id="@+id/staticColorPicker"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        app:density="8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/static_title"
        android:isScrollContainer="true"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/set_static_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_static_button_text"
        app:layout_constraintBottom_toBottomOf="@+id/staticColorPicker"
        app:layout_constraintEnd_toEndOf="@id/static_color_2_preview"
        app:layout_constraintStart_toStartOf="@id/static_color_1_preview"/>

    <ImageView
        android:id="@+id/static_color_1_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@drawable/color_indicator_circle_background"
        android:elevation="2dp"
        android:padding="4dp"
        android:src="@drawable/color_indicator_circle"
        app:layout_constraintStart_toEndOf="@+id/staticColorPicker"
        app:layout_constraintTop_toTopOf="@+id/staticColorPicker"
        app:tint="@color/teal_200" />

    <ImageView
        android:id="@+id/static_color_2_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:background="@drawable/color_indicator_circle_background"
        android:elevation="2dp"
        android:padding="4dp"
        android:src="@drawable/color_indicator_circle"
        app:layout_constraintStart_toEndOf="@id/static_color_1_preview"
        app:layout_constraintTop_toTopOf="@+id/staticColorPicker"
        app:tint="@color/teal_700" />

    <ImageView
        android:id="@+id/static_color_3_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/color_indicator_circle_background"
        android:elevation="2dp"
        android:padding="4dp"
        android:src="@drawable/color_indicator_circle"
        app:layout_constraintStart_toEndOf="@+id/staticColorPicker"
        app:layout_constraintTop_toBottomOf="@+id/static_color_1_preview"
        app:tint="@color/purple_200" />

    <ImageView
        android:id="@+id/static_color_4_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/color_indicator_circle_background"
        android:elevation="2dp"
        android:padding="4dp"
        android:src="@drawable/color_indicator_circle"
        app:layout_constraintStart_toEndOf="@+id/static_color_3_preview"
        app:layout_constraintTop_toBottomOf="@+id/static_color_2_preview"
        app:tint="@color/purple_500" />

    <TextView
        android:id="@+id/slot_1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/save_slot_1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saved_configs_title" />

    <TextView
        android:id="@+id/slot_2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/save_slot_2"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slot_1_text" />

    <TextView
        android:id="@+id/slot_3_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/save_slot_3"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slot_2_text" />

    <TextView
        android:id="@+id/slot_4_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/save_slot_4"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slot_3_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/slot_1_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:text="@string/load_slot"
        android:fontFamily="@font/nunito_regular"
        app:icon="@drawable/ic_round_model_training_24"
        app:layout_constraintBottom_toBottomOf="@+id/slot_1_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/slot_1_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/slot_2_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:text="@string/load_slot"
        android:fontFamily="@font/nunito_regular"
        app:icon="@drawable/ic_round_model_training_24"
        app:layout_constraintBottom_toBottomOf="@+id/slot_2_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/slot_2_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/slot_3_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:text="@string/load_slot"
        android:fontFamily="@font/nunito_regular"
        app:icon="@drawable/ic_round_model_training_24"
        app:layout_constraintBottom_toBottomOf="@+id/slot_3_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/slot_3_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/slot_4_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:text="@string/load_slot"
        android:fontFamily="@font/nunito_regular"
        app:icon="@drawable/ic_round_model_training_24"
        app:layout_constraintBottom_toBottomOf="@+id/slot_4_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/slot_4_text" />

    <View
        android:id="@+id/title_bar_1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slot_4_button" />

</androidx.constraintlayout.widget.ConstraintLayout>