<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:elevation="4dp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_nav_menu"
        android:theme="@style/Widget.BottomNavigationView"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:theme="@style/Theme.Hexaleaf.AppBarOverlay"
        android:elevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <View
                android:id="@+id/title_bar_1"
                android:layout_width="80dp"
                android:layout_height="2dp"
                android:layout_gravity="start|center_vertical"
                android:background="?android:attr/listDivider"
                android:backgroundTintMode="screen"
                app:layout_constraintBottom_toBottomOf="@+id/title"
                app:layout_constraintEnd_toStartOf="@+id/title"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/title_bar_2"
                android:layout_width="80dp"
                android:layout_height="2dp"
                android:layout_gravity="start|center_vertical"
                android:background="?android:attr/listDivider"
                android:backgroundTintMode="screen"
                app:layout_constraintBottom_toBottomOf="@+id/title"
                app:layout_constraintStart_toEndOf="@+id/title"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/nav_view"
        android:layout_below="@id/appBarLayout"
        android:id="@+id/main_coordinator">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />


        <com.nambimobile.widgets.efab.ExpandableFabLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:id="@+id/fab_layout">

            <com.nambimobile.widgets.efab.Overlay
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <com.nambimobile.widgets.efab.ExpandableFab
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                android:id="@+id/fab_save"
                app:efab_icon="@drawable/ic_round_save_24"
                app:efab_iconAnimationRotationDeg="360"
                app:efab_openingAnimationDurationMs="250"
                app:efab_closingAnimationDurationMs="250"
                app:efab_closingAnticipateTension="0"
                app:efab_firstFabOptionMarginPx="90"/>

            <com.nambimobile.widgets.efab.FabOption
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:label_text="@string/save_slot_4"
                android:onClick="saveFabSlot4Listener"
                app:fab_icon="@drawable/ic_round_save_24"/>
            <com.nambimobile.widgets.efab.FabOption
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:label_text="@string/save_slot_3"
                android:onClick="saveFabSlot3Listener"
                app:fab_icon="@drawable/ic_round_save_24"/>
            <com.nambimobile.widgets.efab.FabOption
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:label_text="@string/save_slot_2"
                android:onClick="saveFabSlot2Listener"
                app:fab_icon="@drawable/ic_round_save_24"/>
            <com.nambimobile.widgets.efab.FabOption
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:label_text="@string/save_slot_1"
                android:onClick="saveFabSlot1Listener"
                app:fab_icon="@drawable/ic_round_save_24"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                app:srcCompat="@drawable/ic_round_power_settings_new_24"
                android:layout_gravity="bottom|end"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

        </com.nambimobile.widgets.efab.ExpandableFabLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</RelativeLayout>